Fixes #31298 - Table pagination in react has wrong margin

--- a/webpack/ForemanTasks/Components/TasksTable/TasksTablePage.scss
+++ b/webpack/ForemanTasks/Components/TasksTable/TasksTablePage.scss
@@ -1,6 +1,3 @@
-.tasks-pagination {
-  margin-top: -6px;
-}
 .tasks-table {
   margin-bottom: 70px;
 }
